[project]
name = "pr-split"
version = "0.1.1"
description = "Decompose large PRs into a DAG of small, reviewable stacked PRs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=2.24.0",
    "tiktoken>=0.12.0",
    "unidiff>=0.7.5",
    "typer>=0.15.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.9.0"]
test = ["pytest>=8.3.0"]

[project.scripts]
pr-split = "pr_split.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ty>=0.0.19",
]
